--- a/playerClient/index.css
+++ b/playerClient/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(235, 229, 229);
+    background-color: rgb(102, 102, 102);
     margin: 0;
     padding: 0;
 }
@@ -10,7 +10,6 @@ body{
     top: 10%;
     width: 100%;
     height: 200px;
-    background-color: antiquewhite;
     text-align: center;
 }
 
@@ -22,9 +21,10 @@ body{
     margin:0 20px 0 20px;
 
     border-radius: 20px;
-    border: 10px solid rgb(73, 73, 73);
+    border: 10px solid rgb(78, 78, 78);
+    background-color: rgb(129, 128, 126);
 
-    transition: all 0.3s;
+    transition: border 1s, transform 0.3s;
     transition-timing-function: cubic-bezier(0,.95,.25,1);
     
 }
@@ -46,7 +46,7 @@ body{
     bottom:40px;
     width:100%;
     height: 200px;
-    background-color: rebeccapurple;
+    background-color: rgba(41, 41, 41, 1);
     
     text-align: center;
 }
