--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -8,34 +8,31 @@ body::-webkit-scrollbar {
     display: none;
   }
 
-/*For joining server*/
-.joinServerOverlay{
-    display: none;
+.card{
+    background-color: rgb(92, 84, 56);
+    width:120px;
+    height:180px;
+    border-radius: 20px;
+    border: 10px solid black;
+}
+
+/*For selecting cards*/
+#cardSelectionPage{
     position: absolute;
-    width:80%;
-    height: 300px;
-    top:10%;
-    left:10%;
-    background-color: aliceblue;
     z-index: 2;
+    width:100%;
+    height:100%;
+    background-color: rgb(92, 92, 92);
 }
+#cardSelectionPage span{
 
-.joinServerOverlay input{
-    position: relative;
-    top:100px;
-    width:79%;
-    padding: 0;
-    height:100px;
-    display: inline-block;
 }
-
-.joinServerOverlay button{
-    padding: 0;
+#cardSelectionPage .card{
     position: relative;
-    top:100px;
-    width:20%;
-    height:100px;
     display: inline-block;
+
+    transition: bottom 0.2s, margin 0.75s;
+    transition-timing-function: cubic-bezier(0,.95,.25,1); 
 }
 
 /*For playing cards*/
@@ -64,15 +61,12 @@ body::-webkit-scrollbar {
 }
 
 .cardSlot .card{
-    background-color: rgb(92, 84, 56);
     position: absolute;
-    width:120px;
-    height:180px;
     bottom:0px;
-    border-radius: 20px;
-    border: 10px solid black;
     margin: -10px;
 }
+
+
 
 /*For the hand*/
 #handPoint{
@@ -85,13 +79,8 @@ body::-webkit-scrollbar {
 }
 
 #handPoint .card{
-    background-color: rgb(92, 84, 56);
     position: relative;
-    width:120px;
-    height:180px;
     bottom:0px;
-    border-radius: 20px;
-    border: 10px solid black;
     display: inline-block;
     margin: 0 0 0 -30px;
 
