--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -1,7 +1,25 @@
+@import url('../fonts/loadfont.css');
+
+*{
+    font-family: MainFont;
+    font-weight: 400;
+}
+
 body{
     background-color: rgb(102, 102, 102);
     margin: 0;
     padding: 0;
+    
+}
+.backgroundDiv{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(102, 102, 102,0);
+    -webkit-box-shadow: inset 0px 0px 500px 100px #000000; 
+    box-shadow: inset 0px 0px 500px 100px #000000;
+    z-index: 2;
+    pointer-events: none;
 }
 
 body::-webkit-scrollbar {
@@ -19,14 +37,27 @@ body::-webkit-scrollbar {
 /*For selecting cards*/
 #cardSelectionPage{
     position: absolute;
-    z-index: 2;
+    z-index: 4;
     width:100%;
     height:100%;
     background-color: rgb(92, 92, 92);
-}
-#cardSelectionPage h1{
+    -webkit-box-shadow: inset 0px 0px 500px 100px #000000; 
+    box-shadow: inset 0px 0px 500px 100px #000000;
+    text-align: center;
 
 }
+#cardSelectionPage h1{
+    font-size: 6em;
+    margin: 70px 0 0 0;
+}
+#cardSelectionPage #cardPickZone{
+    position: absolute;
+    margin-top: 0;
+    width: 100%;
+    height: 100px;
+    background-color: rgba(160, 135, 135, 0.411);
+}
+
 #cardSelectionPage .card{
     position: relative;
     display: inline-block;
@@ -38,6 +69,7 @@ body::-webkit-scrollbar {
 /*For playing cards*/
 #cardPlacementSlots{
     position: absolute;
+    z-index: 1;
     top: 10%;
     width: 100%;
     height: 200px;
@@ -67,34 +99,38 @@ body::-webkit-scrollbar {
 }
 
 
-
 /*For the hand*/
 #handPoint{
     position: absolute;
     bottom:40px;
     width:100%;
     height: 200px;
-    background-color: rgba(41, 41, 41, 1);
+    background-color: rgba(41, 41, 41, 0);
     text-align: center;
+    z-index: 3;
 }
 
 #handPoint .card{
     position: relative;
     bottom:0px;
     display: inline-block;
-    margin: 0 0 0 -30px;
+    margin: 0 0 0 -60px;
 
-    transition: bottom 0.2s, margin 0.75s;
+
+    transition: bottom 0.2s, margin 0.75s, box-shadow 0.4s;
     transition-timing-function: cubic-bezier(0,.95,.25,1);
 }
 
 #handPoint .card:hover{
     bottom:20px;
-    margin: 0 35px 0 5px;
+    margin: 0 45px 0 -15px;
+
+    z-index: 1;
 }
 
 .highlightCard{
     position: absolute;
+    z-index: 10;
     width:120px;
     height:180px;
     border-radius: 20px;
