--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -9,7 +9,7 @@ body{
     background-color: rgb(102, 102, 102);
     margin: 0;
     padding: 0;
-    
+    overflow-x: hidden;
 }
 .backgroundDiv{
     position: absolute;
@@ -37,14 +37,16 @@ body::-webkit-scrollbar {
 /*For selecting cards*/
 #cardSelectionPage{
     position: absolute;
+    top:0;
+    left:100%;
     z-index: 4;
     width:100%;
     height:100%;
     background-color: rgb(92, 92, 92);
-    -webkit-box-shadow: inset 0px 0px 500px 100px #000000; 
-    box-shadow: inset 0px 0px 500px 100px #000000;
+    -webkit-box-shadow: inset 0px 0px 500px 100px #000000, 0px 0px 500px 100px #000000; 
+    box-shadow: inset 0px 0px 500px 100px #000000, 0px 0px 500px 100px #000000;
     text-align: center;
-
+   
 }
 #cardSelectionPage h1{
     font-size: 6em;
