--- a/Public/serverClient/index.css
+++ b/Public/serverClient/index.css
@@ -155,12 +155,40 @@ body::-webkit-scrollbar {
 /*Health meter*/
 #scaleDiv{
     position: absolute;
-    z-index: 5;
-    top: 50px;
-    width: 100px;
-    height: 300px;
+    width: 150px;
+    height: 40px;
     top:50%;
     right:15%;
     transform: translateY(-50%);
-    background-color: rgba(95, 95, 95, 0.472);
+    background-color: rgb(121, 113, 101);
+    border-radius: 10px;
+    border: 10px solid rgb(41, 41, 41);
+    text-align: center;
+    color:whitesmoke;
+    line-height: 100px;
+    font-size: 5em;
+}
+
+#scaleDiv #player1Scale{
+    position: absolute;
+    width: 90px;
+    left:50%;
+    transform: translate(-50%);
+    height: 100px;
+    background-color: rgb(141, 37, 37);
+    top: 40px;
+    border-radius: 0 0 10px 10px;
+    border: 10px solid rgb(41, 41, 41);
+}
+
+#scaleDiv #player2Scale{
+    position: absolute;
+    width: 90px;
+    left:50%;
+    transform: translate(-50%);
+    height: 100px;
+    background-color: rgb(141, 37, 37);
+    border-radius: 10px 10px 0 0;
+    top:-120px;
+    border: 10px solid rgb(41, 41, 41);
 }
