--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -39,8 +39,8 @@ body::-webkit-scrollbar {
 /*For selecting cards*/
 #cardSelectionPage{
     position: absolute;
-    top:0;
-    left:-100%;
+    top:-100%;
+    left:0;
     z-index: 5;
     width:100%;
     height:100%;
