--- a/Public/serverClient/index.css
+++ b/Public/serverClient/index.css
@@ -19,6 +19,18 @@ h1{
     left: 10px;
 }
 
+#SelectionPageShow{
+    position: absolute;
+    z-index: 10;
+    width: 300px;
+    height: 100px;
+    bottom: 20px;
+    left: 20px;
+    font-size: 3em;
+    border: 10px solid #000;
+    border-radius: 10px;
+}
+
 body{
     background-color: rgb(102, 102, 102);
     margin: 0;
@@ -39,7 +51,7 @@ body::-webkit-scrollbar {
     background-color: rgb(102, 102, 102,0);
     -webkit-box-shadow: inset 0px 0px 500px 100px #000000; 
     box-shadow: inset 0px 0px 500px 100px #000000;
-    z-index: 2;
+    z-index: 5;
     pointer-events: none;
 }
 
@@ -67,7 +79,7 @@ body::-webkit-scrollbar {
     position: absolute;
     top:-100%;
     left:0;
-    z-index: 5;
+    z-index: 8;
     width:100%;
     height:100%;
     background-color: rgb(92, 92, 92);
@@ -97,10 +109,6 @@ body::-webkit-scrollbar {
     transition-timing-function: cubic-bezier(0,.95,.25,1); 
 }
 
-#cardSelectionPage .card:hover{
-    transform: scale(1.05);
-}
-
 /*For displaying Cards*/
 #playerBoard{
     position: absolute;
@@ -119,12 +127,13 @@ body::-webkit-scrollbar {
     top:0;
     left:50%;
     transform: translateX(-50%);
+    width:100%;
 }
 
 #player2Board{
     position: absolute; 
     bottom:0;
-   
+    width:100%;
     left:50%;
     transform: translateX(-50%);
 }
@@ -158,7 +167,9 @@ body::-webkit-scrollbar {
     width: 150px;
     height: 40px;
     top:50%;
-    right:15%;
+    display: inline-block;
+    margin-left: 400px;
+    z-index: 1;
     transform: translateY(-50%);
     background-color: rgb(121, 113, 101);
     border-radius: 10px;
