--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -120,7 +120,8 @@ body::-webkit-scrollbar {
 
 #handPoint .card{
     position: relative;
-    bottom:0px;
+    top:0px;
+    
     display: inline-block;
     margin: 0 0 0 -60px;
 
@@ -132,8 +133,43 @@ body::-webkit-scrollbar {
 #handPoint .card:hover{
     bottom:20px;
     margin: 0 45px 0 -15px;
-
     z-index: 1;
+}
+
+.card{
+    vertical-align: top;
+}
+
+.name{
+    font-size: 2.2em;
+    height: 20px;
+    width: 100%;
+}
+
+.damage{
+    font-size: 2.5em;
+    font-weight: bold;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    color: rgb(110, 30, 30);
+}
+
+.health{
+    font-size: 2.5em;
+    font-weight: bold;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    color: rgb(88, 149, 69);
+}
+
+.cost{
+    font-size: 2em;
+    font-weight: bold;
+    position: absolute;
+    bottom: 80px;
+    width: 100%;
 }
 
 .highlightCard{
