--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -10,14 +10,32 @@ h1{
     font-size: 4em;
 }
 
-#IpDisplay{
-    z-index: 10;
-    font-size: 2em;
-    color:whitesmoke;
+/*Join room*/
+
+#bodyPregame{
     position: absolute;
-    top: 10px;
-    left: 10px;
+    z-index: 12;
+    background-color: rgb(102, 102, 102);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    overflow-x: hidden;
 }
+
+#bodyPregame #roomCode{
+    margin-top: 200px;
+    font-size: 3em;
+}
+
+#bodyPregame #player1State, #bodyPregame #player2State{
+    font-size:3em; 
+    margin: 30px 0 30px 0;
+    
+}
+
+/**/
 
 #SelectionPageShow{
     position: absolute;
@@ -64,9 +82,6 @@ body::-webkit-scrollbar {
     vertical-align: top;
 }
 
-.card{
-    
-}
 
 .name{
     font-size: 2.2em;
