--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -10,7 +10,7 @@ body{
     background-color: rgb(102, 102, 102);
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 section { /* Different sections to simulate page changes, while still staying on the same page */
@@ -20,6 +20,7 @@ section { /* Different sections to simulate page changes, while still staying on
     height: 100%;
     width: 100%;
     display: none;
+    overflow: hidden;
 }
 section.onscreen {
     display: block;
@@ -37,7 +38,7 @@ section.onscreen {
     pointer-events: none;
 }
 
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,section::-webkit-scrollbar {
     display: none;
   }
 
@@ -77,7 +78,6 @@ body::-webkit-scrollbar {
     height:100%;
   
     font-size: 1.5em;  
-
 }
 
 #joinServerPage button{
