--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -7,6 +7,7 @@
 }
 
 body{
+    font-family: MainFont;
     background-color: rgb(102, 102, 102);
     margin: 0;
     padding: 0;
@@ -196,7 +197,7 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
 }
 
 .name{
-    font-size: 2.2em;
+    font-size: 2em;
     height: 20px;
     width: 100%;
 }
