In the fiwst age,in the fiwst incident... When the shafts fiwst wenghtened.. ONE STOOD. Buwned by the embews of easiness,his souw bwistewed by the stupidity of my discowd and tainted beyond basedness,he chose the path of pewpetuaw uneasiness. In his wavenous howniness he found no peace; and with boiwing cum he scouwed Gensokyo seeking intewcouwse with the youkai who wwonged him. He wowe the cwown of the Dosu Yukkuwi,and those that tasted the stwength of his danmaku named him... MANNOSUKE.

--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -40,6 +40,15 @@ h1{
   height: 20px;
 }
 
+section{
+    display: none;
+}
+
+section.onscreen {
+    display: block;
+    
+}
+
 /**/
 
 #SelectionPageShow{
