--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -223,7 +223,7 @@ body::-webkit-scrollbar {
 #playerBoard .cardSlots .card{
     position: absolute;
     bottom:0px;
-    margin: -10px -60px;
+    margin: 0 -10px 0 0;
 }
 
 
