--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -134,6 +134,35 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
     transform: scale(1.05);
 }
 
+#selectedCards{
+    position: fixed;
+    bottom:40px;
+    width:100%;
+    height: 200px;
+    background-color: rgba(41, 41, 41, 0);
+    text-align: center;
+    z-index: 3;
+    display: none;
+}
+
+#selectedCards .card{
+    position: relative;
+    top:0px;
+    
+    display: inline-block;
+    margin: 0 0 0 -60px;
+
+
+    transition: bottom 0.2s, margin 0.75s, box-shadow 0.4s;
+    transition-timing-function: cubic-bezier(0,.95,.25,1);
+}
+
+#selectedCards .card:hover{
+    top:-20px;
+    margin: 0 45px 0 -15px;
+    z-index: 1;
+}
+
 /*For playing cards*/
 #actionSlots{
     position: absolute;
@@ -238,8 +267,8 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
     font-size: 2.5em;
     font-weight: bold;
     position: absolute;
-    bottom: 20px;
-    left: 20px;
+    bottom: 5px;
+    left: 10px;
     color: rgb(110, 30, 30);
 }
 
@@ -247,8 +276,8 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
     font-size: 2.5em;
     font-weight: bold;
     position: absolute;
-    bottom: 20px;
-    right: 20px;
+    bottom: 5px;
+    right: 10px;
     color: rgb(88, 149, 69);
 }
 
@@ -256,7 +285,26 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
     font-size: 2em;
     font-weight: bold;
     position: absolute;
-    bottom: 80px;
+    bottom: 100px;
+    right: 5px;
+    
+}
+
+.cost .blood{
+    width: 10px;
+    background-color: rgb(105, 24, 24);
+    border-radius: 3px;
+    border: 3px solid black;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 0 0 -5px;
+}
+
+.description{
+    position: absolute;
+    top: 60px;
+    font-size: 2em;
     width: 100%;
 }
 
