--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -97,18 +97,18 @@ body::-webkit-scrollbar {
 
 
 .name{
-    margin-top: 5px;
     font-size: 2em;
     height: 20px;
     width: 100%;
 }
 
 .damage{
+    bottom: 20px;
     font-size: 2.5em;
     font-weight: bold;
     position: absolute;
-    bottom: 20px;
-    left: 20px;
+    bottom: 5px;
+    left: 10px;
     color: rgb(110, 30, 30);
 }
 
@@ -116,8 +116,8 @@ body::-webkit-scrollbar {
     font-size: 2.5em;
     font-weight: bold;
     position: absolute;
-    bottom: 20px;
-    right: 20px;
+    bottom: 5px;
+    right: 10px;
     color: rgb(88, 149, 69);
 }
 
@@ -125,7 +125,26 @@ body::-webkit-scrollbar {
     font-size: 2em;
     font-weight: bold;
     position: absolute;
-    bottom: 80px;
+    bottom: 100px;
+    left: 5px;
+    
+}
+
+.cost .blood{
+    width: 10px;
+    background-color: rgb(105, 24, 24);
+    border-radius: 3px;
+    border: 3px solid black;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 -6px 0 0;
+}
+
+.description{
+    position: absolute;
+    top: 70px;
+    font-size: 2em;
     width: 100%;
 }
 
