--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -192,7 +192,7 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
 #actionSlots .card{
     position: relative;
     display: inline-block;
-    margin:0 20px 0 20px;
+    margin:0 40px 0 40px;
     transition: border 1s, transform 0.3s;
     transition-timing-function: cubic-bezier(0,.95,.25,1);
 }
@@ -343,8 +343,43 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
 transform: scale(1.05);
 }
 
-#bloodCounter{
+#sacrificeCardBtn{
     position: absolute;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 4em;
+    font-weight: bold;
+    z-index: 4;
+
+    padding: 10px;
+    bottom:20px;
+    left: 40px;
+    
+    background-color: rgb(182, 177, 177);
+    color:rgb(116, 30, 30);
+    
+    border: 10px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    display: none;
+}
+
+#bloodLevel{
+    position: absolute;
+    bottom:150px;
+    left:75px;
+}
+
+#bloodLevel .blood{
+    background-color: rgb(105, 24, 24);
+    border-radius: 5px;
+    border: 5px solid black;
+    width: 50px;
+    height: 50px;
+    margin: 5px 0 0 0;
+    transform: translateX(-50%);
+}
+
+#sacrificeCardBtn{
+    position: absolute;  
 }
 
 
