--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -242,6 +242,9 @@ body::-webkit-scrollbar {
     position:absolute;
     top:0px;
     margin: 0 0 0 -10px;
+}
+
+.cardSlots{
     
 }
 
@@ -285,4 +288,27 @@ body::-webkit-scrollbar {
     border-radius: 10px 10px 0 0;
     top:-120px;
     border: 10px solid rgb(41, 41, 41);
+}
+
+/*Effect*/
+
+.damageTextEffect{
+    position: absolute;
+    font-size: 1em;
+    font-weight: bold;
+    transition: top 0.5s linear, left 0.5s linear, opacity 0.5s cubic-bezier(1,0,1,1), transfrom 0.5s cubic-bezier(1,0,1,1);
+    -webkit-transition: top 0.5 linear, left 0.5s linear, opacity 0.5s cubic-bezier(1,0,1,1), transfrom 0.5s cubic-bezier(1,0,1,1);
+    z-index: 32;
+    color:rgb(47, 14, 14);
+    
+
+}
+
+.damageClawEffect{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    background-image: url('../assets/clawPNG.png');
+    background-size: 150px 150px;
+    z-index: 30;
 }
