--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -261,42 +261,40 @@ body::-webkit-scrollbar {
     position: absolute;
     width: 150px;
     height: 40px;
+    left:50%;
     top:50%;
     display: inline-block;
-    margin-left: 400px;
     z-index: 1;
-    transform: translateY(-50%);
+    transform: translate(-50%,-50%);
     background-color: rgb(121, 113, 101);
     border-radius: 10px;
     border: 10px solid rgb(41, 41, 41);
     text-align: center;
     color:whitesmoke;
-    line-height: 100px;
-    font-size: 5em;
+    line-height: 75px;
+    font-size: 4em;
+    
+}
+
+#playerBoard #scaleDiv #player1Scale,#playerBoard #scaleDiv #player2Scale{
+    position: absolute;
+    width: 90px;
+    left:50%;
+    transform: translate(-50%);
+    height: 80px;
+    background-color: rgb(141, 37, 37);
+    border: 10px solid rgb(41, 41, 41);
 }
 
 #playerBoard #scaleDiv #player1Scale{
-    position: absolute;
-    width: 90px;
-    left:50%;
-    transform: translate(-50%);
-    height: 100px;
-    background-color: rgb(141, 37, 37);
-    top: 40px;
+    top: 20px;
     border-radius: 0 0 10px 10px;
-    border: 10px solid rgb(41, 41, 41);
 }
 
 #playerBoard #scaleDiv #player2Scale{
-    position: absolute;
-    width: 90px;
-    left:50%;
-    transform: translate(-50%);
-    height: 100px;
-    background-color: rgb(141, 37, 37);
     border-radius: 10px 10px 0 0;
-    top:-120px;
-    border: 10px solid rgb(41, 41, 41);
+    top:-80px;
+ 
 }
 
 /*Effect*/
