--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -1,4 +1,5 @@
 @import url('../fonts/loadfont.css');
+@import url("../colorPalette.css");
 
 *{
     font-family: MainFont;
@@ -33,7 +34,6 @@ section.onscreen {
     top:0;
     width: 100%;
     height: 100%;
-    background-color: rgb(102, 102, 102,0);
     -webkit-box-shadow: inset 0px 0px 500px 100px #000000; 
     box-shadow: inset 0px 0px 500px 100px #000000;
     z-index: 2;
@@ -51,7 +51,7 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
     width:120px;
     height:180px;
     border-radius: 20px;
-    border: 10px solid black;
+    border: 10px solid rgb(17, 17, 17);
 }
 
 .highlightCard{
@@ -160,6 +160,44 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
     margin: 30px 0 0 0;
     width: 100%;
     font-size: 2em;
+}
+
+/*The Card shop*/
+#cardShop{
+    text-align: center;
+    
+}
+
+#cardShop #cardShopHeader{
+    font-size: 5em;
+    margin-top: 70px;
+    border-bottom: 3px solid black;
+}
+
+#cardShop #itemPage{
+    margin-top: 30px;
+    position: absolute;
+    z-index: 1;
+    left:20%;
+    width: 80%;
+    height: 180px;
+}
+
+#cardShop #storeCurrencyHolder{
+    position: absolute;
+    bottom:10%;
+    left:5%;
+   
+}
+
+#cardShop #storeCurrencyHolder .currency{
+    background-color: rgb(105, 24, 24);
+    border-radius: 50%;
+    border: 5px solid black;
+    width: 60px;
+    height: 60px;
+    margin: 5px 0 0 0;
+    transform: translateX(-50%);
 }
 
 /*For selecting cards*/
