--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -1,15 +1,18 @@
 @import url('../fonts/loadfont.css');
 @import url("../colorPalette.css");
+@import url("../cardDesign.css");
 
 *{
     font-family: MainFont;
+    color: var(--text);
     font-weight: 400;
     cursor: pointer;
 }
 
 body{
     font-family: MainFont;
-    background-color: rgb(102, 102, 102);
+    background-color: var(--backgroundColor);
+    
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -46,77 +49,6 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
 
 
 /*Card styling*/
-.card, .highlightCard{
-    background-color: rgb(92, 84, 56);
-    width:120px;
-    height:180px;
-    border-radius: 20px;
-    border: 10px solid rgb(17, 17, 17);
-}
-
-.highlightCard{
-    position: absolute;
-    z-index: 10; 
-    text-align: center;
-    transition: all 0.3s;
-    transition-timing-function: cubic-bezier(0,.95,.25,1);
-}
-
-.card{
-    vertical-align: top;
-}
-
-.name{
-    font-size: 2em;
-    height: 20px;
-    width: 100%;
-}
-
-.damage{
-    bottom: 20px;
-    font-size: 2.5em;
-    font-weight: bold;
-    position: absolute;
-    bottom: 5px;
-    left: 10px;
-    color: rgb(110, 30, 30);
-}
-
-.health{
-    font-size: 2.5em;
-    font-weight: bold;
-    position: absolute;
-    bottom: 5px;
-    right: 10px;
-    color: rgb(88, 149, 69);
-}
-
-.cost{
-    font-size: 2em;
-    font-weight: bold;
-    position: absolute;
-    bottom: 100px;
-    left: 5px;
-    
-}
-
-.cost .blood{
-    width: 10px;
-    background-color: rgb(105, 24, 24);
-    border-radius: 3px;
-    border: 3px solid black;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin: 0 -6px 0 0;
-}
-
-.description{
-    position: absolute;
-    top: 70px;
-    font-size: 2em;
-    width: 100%;
-}
 
 /*UI for joing server*/
 
@@ -177,10 +109,16 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
 #cardShop #itemPage{
     margin-top: 30px;
     position: absolute;
+    text-align: center;
     z-index: 1;
     left:20%;
     width: 80%;
     height: 180px;
+}
+
+#cardShop #itemPage .card{
+    position: relative;
+
 }
 
 #cardShop #storeCurrencyHolder{
