--- a/Public/playerClient/index.css
+++ b/Public/playerClient/index.css
@@ -97,45 +97,70 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
 /*The Card shop*/
 #cardShop{
     text-align: center;
-    
+    overflow-y: scroll;
 }
 
 #cardShop #cardShopHeader{
     font-size: 5em;
     margin-top: 70px;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid #fff;
 }
 
 #cardShop #itemPage{
-    margin-top: 30px;
     position: absolute;
-    text-align: center;
     z-index: 1;
-    left:20%;
-    width: 80%;
-    height: 180px;
+    width: 100%;
 }
 
-#cardShop #itemPage .card{
+#cardShop #itemPage .shelf{
     position: relative;
-
+    margin: 30px 0;
+    width:100%;
 }
 
-#cardShop #storeCurrencyHolder{
-    position: absolute;
-    bottom:10%;
-    left:5%;
-   
+#cardShop #itemPage .shelf .shelfHeader{
+    position: relative;
+    text-align: center;
+    font-size: 4em;
+    width:100%;
 }
 
-#cardShop #storeCurrencyHolder .currency{
-    background-color: rgb(105, 24, 24);
-    border-radius: 50%;
-    border: 5px solid black;
-    width: 60px;
-    height: 60px;
-    margin: 5px 0 0 0;
-    transform: translateX(-50%);
+#cardShop #itemPage .shelf .shelfTextDiv{
+    position: relative;
+    font-size: 4em;
+    line-height: 200px;
+    height: 200px;
+    width:30px;
+    display: inline !important;  
+}
+
+#cardShop #itemPage .shelf .card{
+    position: relative !important;
+    display: inline-block !important;
+    margin: 0 20px 0 20px;
+}
+
+#cardShop #itemPage #deck .card{
+ position: absolute;
+ text-align: center;
+ bottom:20px;
+ width: 100%;
+ z-index: 10;
+}
+
+#cardShop #itemPage #deck .card{
+    position: relative !important;
+    display: inline-block !important;
+    margin: 0 20px 0 20px;
+}
+
+#cardShop .card{
+    transition: transform 0.3s cubic-bezier(0,.95,.25,1); 
+    -webkit-transition: transform 0.3s cubic-bezier(0,.95,.25,1); 
+}
+
+#cardShop .card:hover{
+    transform: scale(1.05);
 }
 
 /*For selecting cards*/
@@ -178,34 +203,6 @@ body::-webkit-scrollbar,section::-webkit-scrollbar {
     transform: scale(1.05);
 }
 
-#selectedCards{
-    position: fixed;
-    bottom:40px;
-    width:100%;
-    height: 200px;
-    background-color: rgba(41, 41, 41, 0);
-    text-align: center;
-    z-index: 3;
-    display: none;
-}
-
-#selectedCards .card{
-    position: relative;
-    top:0px;
-    
-    display: inline-block;
-    margin: 0 0 0 -60px;
-
-
-    transition: bottom 0.2s, margin 0.75s, box-shadow 0.4s;
-    transition-timing-function: cubic-bezier(0,.95,.25,1);
-}
-
-#selectedCards .card:hover{
-    top:-20px;
-    margin: 0 45px 0 -15px;
-    z-index: 1;
-}
 
 /*For playing cards*/
 #actionSlots{
