--- a/Public/cardDesign.css
+++ b/Public/cardDesign.css
@@ -38,10 +38,13 @@
     background-position: -30px -20px;
     background-size: 180px 260px;
     background-repeat: no-repeat;
+    
 }
 
 .card{
     vertical-align: top;
+    z-index: 1;
+
 }
 
 .name{
@@ -50,7 +53,7 @@
     height: 34px;
     width: 100%;
     border-bottom: 2px solid var(--cardBorderColor);
-    z-index: 12;
+    z-index: 1;
 }
 
 .damage{
@@ -58,7 +61,7 @@
     position: absolute;
     bottom: 5px;
     left: 10px;
-    z-index: 12;
+    z-index: 1;
 
 }
 
@@ -74,7 +77,7 @@
     background-repeat: no-repeat;
     background-position: 0;
     background-size: 30px;
-    z-index: 12;
+    z-index: 1;
 }
 
 
@@ -84,7 +87,7 @@
     position: absolute;
     bottom: 5px;
     right: 10px;
-    z-index: 12;
+    z-index: 1;
 }
 
 .healthIcon{
@@ -99,7 +102,7 @@
     background-repeat: no-repeat;
     background-position: 0;
     background-size: 30px;
-    z-index: 12;
+    z-index: 1;
 }
 
 .factionSymbol{
@@ -114,7 +117,7 @@
     border-radius: 50%;
     background-color: var(--cardBackgroundColor);
     border: 3px solid var(--cardBorderColor);
-    z-index: 12;
+    z-index: 1;
 }
 
 .cost{
@@ -123,7 +126,7 @@
     position: absolute;
     top: 36px;
     left: -4px;
-    z-index: 12;
+    z-index: 1;
 }
 
 .cost .blood{
@@ -141,13 +144,13 @@
     height: 30px;
     margin: 0 -15px 0 0;
     display: inline-block;
-    z-index: 12;
+    z-index: 1;
 }
 
 .image{
     top:34px;
   
-    background-image: url('./assets/Card\ Images/Drunk.svg');
+    /*background-image: url('./assets/CardImages/Drunk.svg');*/
     background-repeat: no-repeat;
     background-position: 15px 0;
     background-size: 90px;
@@ -162,11 +165,12 @@
     width: 100%;
     height: 90px;
     border-bottom: 3px solid var(--cardBorderColor);
-    z-index: 12;
+    z-index: 1;
 }
 
 .description{
-    background-image: url('./assets/Effect\ Images/Rebirth.svg');
+    /*background-image: url('./assets/EffectImages/Rebirth.svg');*/
+    font-size: 3em !important;
     opacity: 1;
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -178,5 +182,5 @@
     font-size: 0.5em;
     width: 50px;
     height: 50px;
-    z-index: 12;
+    z-index: 1;
 }
