--- a/Public/colorPalette.css
+++ b/Public/colorPalette.css
@@ -1,5 +1,6 @@
 :root{
     --backgroundColor:#0e0c0c;
+    --actionSlotColor:rgb(131, 130, 130);
     
     --cardBackgroundColor:#2a2929;
     --cardBackgroundFadeColor:#4e4c4c;
