--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -48,6 +48,20 @@ section.onscreen {
     display: block;
 }
 
+#bodyPregame #pleaseClickOnThisForAudio {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,.8);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 4em;
+}
+
 /**/
 #SelectionPageShow{
     position: absolute;
