--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -77,6 +77,36 @@ section.onscreen {
     font-size: 4em;
 }
 
+.selectModeWrapper div{
+    display: inline-block;
+    font-size: 3em;
+}
+
+.selectModeWrapper button{
+    background-color: rgba(255, 255, 255, 0);
+    font-size: 3em;
+    outline: none;
+    border:none;
+}
+
+.selectModeWrapper button:hover{
+    transform: scale(1.1);
+}
+
+.selectModeWrapper #leftArrow{
+    margin: 0 10px 0 0;
+}
+
+.selectModeWrapper #rightArrow{
+    margin: 0 0 0 10px;
+}
+
+
+#currentMode{
+    font-size: 2.5em;
+}
+
+
 /**/
 #SelectionPageShow{
     position: absolute;
