updated some things

--- a/Public/hostClient/index.css
+++ b/Public/hostClient/index.css
@@ -315,3 +315,17 @@ section.onscreen {
     transition: opacity 0.3s linear, left 0.7s cubic-bezier(0,1,0.5,1), top 0.7s cubic-bezier(1,0,0.5,1);
     -webkit-transition: opacity 0.3s linear, left 0.7s cubic-bezier(0,1,0.5,1), top 0.7s cubic-bezier(1,0,0.5,1);
 }
+
+/*Scoring cards*/
+/*Scoreboard*/
+#cardComparison #scoreboard{
+    position: absolute;
+    left:100px;
+    top:20px;
+    font-size: 2em;
+}
+
+#cardComparison #scoreboard td{
+    border-bottom: 2px solid #fff;
+    padding: 20px;
+}
