--- a/Public/cardDesign.css
+++ b/Public/cardDesign.css
@@ -183,3 +183,24 @@
     height: 50px;
     z-index: 1;
 }
+
+.saccrificeSymbol{
+    opacity: 1;
+    position: absolute;
+    top: 8px;
+    left:8px;
+    width:104px;
+    height:184px;
+
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 8em;
+    font-weight: bold;
+    color: var(--bloodColor);
+    border-radius: 3px;
+    border: 3px solid var(--bloodColor);
+
+    line-height: 170px;
+    z-index: 45;
+    transition: opacity 0.5s cubic-bezier(0,.95,.25,1);
+    -webkit-transition: opacity 0.5s cubic-bezier(0,.95,.25,1);
+}
