--- a/Public/cardDesign.css
+++ b/Public/cardDesign.css
@@ -204,3 +204,7 @@
     transition: opacity 0.3s cubic-bezier(0,.95,.25,1);
     -webkit-transition: opacity 0.3s cubic-bezier(0,.95,.25,1);
 }
+
+.saccrificeSymbol .dagger{
+    
+}
