--- a/Public/cardDesign.css
+++ b/Public/cardDesign.css
@@ -169,7 +169,6 @@
 }
 
 .description{
-    background-image: url('./assets/Amulets/AceHand.png');
     font-size: 1.8em;
     opacity: 1;
     background-repeat: no-repeat;
@@ -186,7 +185,7 @@
     z-index: 1;
 }
 
-.descriptionSlot1{
+.descriptionSlot0{
     background-size: 30px !important;
     width: 30px !important;
     height: 30px !important;
@@ -194,7 +193,7 @@
     bottom: 30px !important;
 }
 
-.descriptionSlot2{
+.descriptionSlot1{
     background-size: 30px !important;
     width: 30px !important;
     height: 30px !important;
@@ -216,19 +215,19 @@
     color: var(--bloodColor);
     border-radius: 3px;
     border: 3px solid var(--bloodColor);
-
-    line-height: 170px;
     z-index: 45;
     transition: opacity 0.3s cubic-bezier(0,.95,.25,1);
-    -webkit-transition: opacity 0.3s cubic-bezier(0,.95,.25,1);
+    -webkit-transition: opacity 0.3s cubic-bezier(1,0,1.5,1);
 }
 
 .saccrificeSymbol .dagger{
+    position: absolute;
+    top:20px;
     transform: translateX(-50%);
     left: 50%;
     
     font-family: 'Times New Roman', Times, serif;
-    font-size: 8em;
     font-weight: bold;
     color: var(--bloodColor);
+    transition: top 0.1s cubic-bezier(0,.95,.25,1);
 }
